# CSCI2041-Adv.ProgrammingPrinciples

./: Lab #1.ml  OCaml-Chapter 3.rtf  README.md
Homeworks/HW8/: homework_oct_30.ml
Homeworks/Homework1/: hw1.ml  hw1.txt
Homeworks/Homework3/: hw3.ml  hw3_rec.ml  tempCodeRunnerFile.ml
Homeworks/Homework5/: hw5.ml
Homeworks/Homework6/: hw6.txt
Labs/: Lab#2.ml  Lab#3.ml  Lab#4.ml  lab#5.ml  lab#6.md  lab#7.ml  tempCodeRunnerFile.ml
Labs/halloween/: dune-project  halloween.opam
Labs/halloween/_build/: .db  .digest-db  log
Labs/halloween/_build/default/lib/: halloween.cma  halloween.cmxa  halloween.cmxs
Labs/halloween/_build/default/lib/.halloween.objs/byte/: halloween.cmi  halloween.cmo  halloween.cmt  halloween__.cmi  halloween__.cmo  halloween__.cmt  halloween__Lexer.cmi  halloween__Lexer.cmo  halloween__Lexer.cmt  halloween__Parser.cmi  halloween__Parser.cmo  halloween__Parser.cmt  halloween__Parser.cmti
Labs/halloween/_build/default/lib/.halloween.objs/native/: halloween.cmx  halloween__.cmx  halloween__Lexer.cmx  halloween__Parser.cmx
Labs/halloween/_build/default/lib/.merlin-conf/: lib-halloween
Labs/halloween/_build/default/test/.halloween.eobjs/byte/: dune__exe__Halloween.cmi  dune__exe__Halloween.cmti
Labs/halloween/_build/default/test/.halloween.eobjs/native/: dune__exe__Halloween.cmx
Labs/halloween/_build/default/test/.merlin-conf/: exe-halloween
Labs/halloween/lib/: lexer.mll  parser.mly
Notes/Chapter 2/OCaml - Chapter 2.rtfd/: TXT.rtf
Notes/Chapter 3/OCaml-Chapter 3.rtfd/: TXT.rtf
Notes/Chapter 4/Chapter 4.rtfd/: TXT.rtf
(+4 files in other folders)
