(lang dune 3.10)
(using menhir 2.1)
(name halloween)

(generate_opam_files true)



(authors "Cindy Chen")

(maintainers "Maintainer Name")

(documentation https://url/to/documentation)

(package
 (name halloween)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
